you can upload img and predict pokemon

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@
 *.so
 *.dylib
 
-# Ignore vendor directories
-vendor/
+
 
 # Ignore node modules
 node_modules/
@@ -34,3 +33,8 @@ backend/build/
 .env.development.local
 .env.test.local
 .env.production.local
+frontend/src/assets/pokemons/pokemon.png
+frontend/src/py/models/pokedex_saved_model/
+
+
+frontend/src/py/pokedex-venv
