--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.19.0",
     "@tensorflow/tfjs-node": "^4.19.0",
+    "@types/react-transition-group": "^4.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.4"
